flutter2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flutter2-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flutter2-frontend
  template:
    metadata:
      labels:
        app: flutter2-frontend
    spec:
      containers:
      - name: flutter2-frontend
        image: mohamedmass1245/domain_flutter:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flutter2-frontend-service
spec:
  selector:
    app: flutter2-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80           # Port inside the container (Flutter app)
      targetPort: 80      # Target port on the container
      nodePort: 30002     # External port on the node
