ingress-flutter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flutter-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/enable-cors: "true"  # Enable CORS
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"  # Allow all origins, or specify your domain
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
spec:
  rules:
  - host: buyp.ddns.net  # Your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flutter2-frontend-service  # Name of your Flutter frontend service
            port:
              number: 80  # Port your Flutter service is listening on
  tls:
  - hosts:
    - buyp.ddns.net
    secretName: flutter-tls-secret  # If you have a TLS certificate, specify the secret name here (optional)
